Refactor README and enhance backend functionality: Updated README.md to rename "Requirements Satisfaction" section to "Features." Added new database migration and seeding scripts in package.json. Modified userController to include rating IDs in store responses and updated RatingDialog and StoreExplorer components to support rating updates with IDs.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
+    "start:prod": "NODE_ENV=production node dist/server.js",
     "dev": "nodemon src/server.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
+    "db:migrate": "prisma migrate deploy",
+    "db:migrate:dev": "prisma migrate dev",
     "db:seed": "ts-node src/prisma/seed.ts",
+    "db:seed:prod": "NODE_ENV=production ts-node src/prisma/seed.ts",
+    "db:reset": "prisma migrate reset",
+    "db:studio": "prisma studio",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
